# sacd-ripper

./: Makefile  ProjectHome.md  SACDRCompatiblePlayers.md  ScarletBook.md  configure  index.html  params.json  readme  readme.rst  todo
branches/0.02/: todo
branches/0.02/sacdread/: sacd_lv2_storage.c  sacd_reader.h
branches/0.02/src/: main.c
branches/0.03/: Makefile  readme  todo
branches/0.03/libs/: Makefile
branches/0.03/msvc/: scarletbook.sln
branches/0.03/sacdread/: scarletbook_types.h
branches/0.03/src/: exit_handler.h  install.c  main.c  output_device.c  ripping.c  ripping.h  rsxutil.h
branches/0.30/: Makefile
branches/0.30/src/: main.c  output_device.c
branches/0.30/tools/sacd_extract/: CMakeLists.txt  main.c  sacd_extract.sln  sacd_extract.vcproj
branches/0.30/tools/sacd_extract/win32/: stdbool.h  unistd.h
branches/0.30/tools/sacd_extract/win32/sys/: atomic.h
branches/0.31/: configure
libs/: Makefile
libs/dstdecoder/: ccp_calc.c  ccp_calc.h  dst_decoder.h  unpack_dst.c
libs/libanergistic/: channel.c  config.h  elf.h  emulate-instrs.c  emulate-instrs.c.in  emulate-instrs.h.in  emulate.c  helper.h  instr-generate.py  instrs  types.h
libs/libcommon/: Makefile  charset.c  charset.h  debug.h  fileutils.c  fileutils.h  log.c  logging.c  logging.h  pb.h  pb_decode.c  pb_encode.c  socket.c  socket.h  usocket.c  usocket.h  utils.c  utils.h  wsocket.c  wsocket.h
libs/libcommon/sys/: atomic.h  io_buffer.h  isoself.h  storage.h
libs/libdstdec/: UnpackDST.c  UnpackDST.h  buffer_pool.c  buffer_pool.h  ccp_calc.c  conststr.h  dst_ac.h  dst_data.c  dst_decoder.c  dst_decoder.h  dst_decoder_ref.c  dst_decoder_ref.h  dst_fram.c  dst_fram.h  dst_init.c  dst_init.h  types.h  unpack_dst.c  unpack_dst.h
libs/libiconv/: libtool
libs/libiconv/lib/: Makefile  Makefile.msvc
libs/libiconv/libcharset/: libtool
libs/libiconv/man/: Makefile
libs/libiconv/srclib/: Makefile
libs/libiconv/tests/: Makefile.msvc  SHIFT_JISX0213.TXT
libs/libid3/: Makefile  charset.c  id3.c  id3.h  id3_frame.c  id3_frame_content.c  id3_frame_text.c  id3_tag.c
libs/libid3tag/: compat.h  configure  crc.c  field.c  field.h  file.c  frame.c  frame.h  frametype.c  frametype.h  genre.c  id3tag.h  latin1.c  latin1.h  libid3tag.list.in  render.c  ucs4.c  utf16.c  utf16.h  utf8.c  util.h
libs/libpatchutils/: Makefile  hvcall.c  hvcall.h  mm.c  patch-utils.c  patch-utils.h
libs/libsacd/: Makefile  common.h  config.h  cuesheet.c  cuesheet.h  dsdiff.c  dsdiff.h  dsdiff_writer.c  dsdiff_writer.h  dsf.c  dsf.h  dst_decoder.c  dst_decoder.h  dst_decoder_ps3.c  dst_decoder_ps3.h  dst_decoder_win.c  endianess.h  ioctl.c  ioctl.h  iso_writer.c  sac_accessor.c  sac_accessor.h  sacd_input.c  sacd_input.h  sacd_pb_stream.c  sacd_pb_stream.h  sacd_read_internal.h  sacd_reader.c  sacd_reader.h  sacd_ripper.pb.h  sacd_ripper.proto  scarletbook.c  scarletbook.h  scarletbook_helpers.c  scarletbook_helpers.h  scarletbook_id3.c  scarletbook_id3.h  scarletbook_output.c  scarletbook_output.h  scarletbook_print.c  (+6 more)
libs/libsacd/sys/: io-buffer.h  isoself.h  storage.h
libs/libunself/: aes.c  aes.h  common.h  self.c  self.h  tools.h  types.h  unself.c  unself.h
libs/unself/: aes.h  self.c
msvc/: scarletbook.sln  scarletbook.vcproj
sacdread/: dsdiff.h  dsdiff_writer.c  endianess.h  ioctl.h  sac_accessor.c  sac_accessor.h  sacd_input.c  sacd_input.h  sacd_lv2_storage.c  sacd_lv2_storage.h  sacd_reader.c  scarletbook_id3.c  scarletbook_id3v2.c  scarletbook_id3v2.h  scarletbook_print.c  scarletbook_read.c  scarletbook_read.h  scarletbook_types.h
sacdread/dstdecode/: dst_init.c  types.h  unpack_dst.h
sacdread/id3/: id3.h  md5.c
src/: exit_handler.c  exit_handler.h  install.c  install.h  main.c  output_device.c  output_device.h  ripping.c  ripping.h  rsxutil.c  rsxutil.h  server.c  server.h
src/msvc/: getopt.h  main.c  scarletbook.vcproj
tags/0.02/sacdread/: dsdiff.h  dsdiff_writer.h  scarletbook_print.c
tags/0.10/: Makefile  readme
tags/0.10/src/: exit_handler.c  output_device.h  ripping.c
tags/0.10/tools/: Makefile
tags/0.21/src/: ripping.c
tools/: Makefile
tools/analysis_dump/src/: exit_handler.c  exit_handler.h  main.c  output_device.c  output_device.h  rsxutil.c  rsxutil.h
tools/sacd_daemon/: Makefile
tools/sacd_daemon/src/: main.c  server.c
tools/sacd_extract/: CMakeLists.txt  changelog  instruction-libraries.txt  main.c  readme.txt  sacd_extract.sln  sacd_extract.vcproj  sacd_extract.vcxproj
tools/sacd_extract/CMakeModules/: FindIconv.cmake
tools/sacd_extract/win32/: config.h  stdbool.h
tools/sacd_extract/win32/sys/: atomic.h
trunk/: Makefile  license  readme  todo
trunk/libs/: Makefile
trunk/libs/libanergistic/: channel.c  channel.h  config.h  elf.c  elf.h  emulate-instrs.h  emulate-instrs.h.in  emulate.c  emulate.h  helper.c  helper.h  instr-generate.py  instrs
trunk/libs/libcommon/: charset.h  fileutils.c  fileutils.h  log.c  logging.c  logging.h  pb.h  pb_encode.c  utils.c  utils.h
trunk/libs/libdstdec/: DSTData.c  DSTData.h  DSTDecoder.c  buffer_pool.c  ccp_calc.h  dst_ac.c  dst_ac.h  dst_decoder.c  dst_decoder.h  dst_decoder_ref.h  dst_fram.c  dst_init.c  types.h  unpack_dst.c  yarn.c
trunk/libs/libiconv/: config.sh
trunk/libs/libid3/: Makefile  charset.h  id3_frame_text.c  unicode.c
trunk/libs/libid3tag/: Makefile.in  aclocal.m4  config.sub  debug.c  file.c  parse.h  render.h  utf8.h  version.c
trunk/libs/libpatchutils/: hvcall.c  mm.c  mm.h  patch-utils.h
trunk/libs/libsacd/: cuesheet.c  dsdiff.c  dsdiff.h  dsf.c  dsf.h  dst_decoder.c  ioctl.c  ioctl.h  (+16 more)
trunk/msvc/: scarletbook.vcproj
trunk/sacdread/: dsdiff_writer.c  endianess.h  ioctl.c  sac_accessor.c  sac_accessor.h  sacd_input.c  sacd_lv2_storage.h  sacd_read_internal.h  sacd_reader.c  sacd_reader.h  scarletbook_id3.h  scarletbook_id3v2.h  scarletbook_print.c  scarletbook_print.h  scarletbook_read.c  scarletbook_read.h  scarletbook_types.h
trunk/src/: main.c  ripping.c  server.c  server.h
wiki/: PageName.wiki  SACDRCompatiblePlayers.wiki  ScarletBook.wiki  Scarlet_Book.wiki
(+243 files in other folders)
